--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,5 @@
 {
-  "cSpell.words": ["MCMXCIV", "Palindrom", "strs"]
+  "editor.fontSize": 16,
+  "editor.fontLigatures": false,
+  "editor.fontWeight": "normal"
 }
