--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
   "editor.fontSize": 16,
   "editor.fontLigatures": false,
-  "editor.fontWeight": "normal"
+  "editor.fontWeight": "normal",
+  "cSpell.words": ["Palindrom"]
 }
